<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddMovieForm">

    <com.example.mobilemoviedatabase.MultiSpinner
        android:id="@+id/movie_business_entity_list"
        android:layout_width="389dp"
        android:layout_height="59dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="372dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="389dp"
        android:layout_height="28dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="324dp"
        android:labelFor="@id/movie_business_entity_list"
        android:text="@string/movie_business_entity_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="389dp"
        android:layout_height="49dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="64dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:text="@string/movie_name_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.mobilemoviedatabase.MultiSpinner
        android:id="@+id/genre_list"
        android:layout_width="389dp"
        android:layout_height="49dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="256dp"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="389dp"
        android:layout_height="25dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="220dp"
        android:labelFor="@id/genre_list"
        android:text="@string/movie_genre_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="389dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/add_movie"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="444dp"
        android:onClick="addMovie"
        android:text="@string/add_movie"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="389dp"
        android:layout_height="25dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="124dp"
        android:labelFor="@id/editTextDescription"
        android:text="@string/movie_description_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="389dp"
        android:layout_height="49dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="160dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:text="@string/movie_description_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>