<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayMovieInformation">

    <TextView
        android:id="@+id/text_view_movie_description"
        android:layout_width="358dp"
        android:layout_height="56dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="296dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_movie_description_label"
        android:layout_width="358dp"
        android:layout_height="56dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="200dp"
        android:labelFor="@id/text_view_movie_description"
        android:text="@string/movie_description_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_movie_name"
        android:layout_width="358dp"
        android:layout_height="56dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="108dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_movie_name_label"
        android:layout_width="358dp"
        android:layout_height="56dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:labelFor="@id/text_view_movie_name"
        android:text="@string/movie_name_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="384dp"
        android:onClick="editMovie"
        android:text="@string/btn_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>