<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddGenreForm">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="389dp"
        android:layout_height="49dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="32dp"
        android:labelFor="@id/editTextName"
        android:text="@string/movie_name_label"
        tools:layout_editor_absoluteX="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="389dp"
        android:layout_height="49dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="96dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:text="@string/movie_name_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="389dp"
        android:layout_height="24dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="156dp"
        android:labelFor="@id/editTextDescription"
        android:text="@string/movie_description_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="389dp"
        android:layout_height="49dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="192dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:text="@string/movie_description_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="252dp"
        android:onClick="addGenre"
        android:text="@string/add_genre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>