<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddBusinessEntity">
    <TextView
        android:id="@+id/textView2"
        android:layout_width="389dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="40dp"
        android:labelFor="@id/editTextName"
        android:text="@string/movie_name_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="0dp" />
    <EditText
        android:id="@+id/editTextName"
        android:layout_width="389dp"
        android:layout_height="49dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="59dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/movie_name_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="389dp"
        android:layout_height="24dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="109dp"
        android:labelFor="@id/editTextDescription"
        android:text="@string/movie_description_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="389dp"
        android:layout_height="49dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="133dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/movie_description_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="252dp"
        android:onClick="addBusinessEntity"
        android:text="@string/add_business_entity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>